--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -345,9 +345,9 @@
     "space-before-function-paren": [
       "error",
       {
-        "anonymous": "never",
-        "named": "always",
-        "asyncArrow": "never"
+        "anonymous": "always",
+        "named": "never",
+        "asyncArrow": "always"
       }
     ],
     "space-in-parens": [
