--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -154,7 +154,14 @@
     ],
     "no-floating-decimal": "error",
     "no-global-assign": "error",
-    "no-implicit-coercion": "error",
+    "no-implicit-coercion": [
+      "error",
+      {
+        "allow": [
+          "!!"
+        ]
+      }
+    ],
     "no-implicit-globals": "error",
     "no-implied-eval": "error",
     "no-inline-comments": "error",
