--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
 {
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": 2021,
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
-    "node": true,
-    "browser": true
+    "node": true
   },
   "ignorePatterns": [
     "node_modules/"
@@ -40,7 +40,9 @@
     "camelcase": [
       "error",
       {
-        "properties": "never"
+        "properties": "never",
+        "ignoreDestructuring": true,
+        "ignoreImports": true
       }
     ],
     "class-methods-use-this": "error",
@@ -48,13 +50,7 @@
       "error",
       "always-multiline"
     ],
-    "comma-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
+    "comma-spacing": "error",
     "comma-style": [
       "error",
       "last"
@@ -74,6 +70,8 @@
     "constructor-super": "error",
     "curly": "error",
     "default-case": "error",
+    "default-case-last": "error",
+    "default-param-last": "error",
     "dot-location": [
       "error",
       "property"
@@ -87,11 +85,23 @@
       "error",
       "expression"
     ],
+    "function-call-argument-newline": [
+      "error",
+      "consistent"
+    ],
+    "function-paren-newline": [
+      "error",
+      "multiline-arguments"
+    ],
     "generator-star-spacing": [
       "error",
       "after"
     ],
     "global-require": "error",
+    "grouped-accessor-pairs": [
+      "error",
+      "getBeforeSet"
+    ],
     "guard-for-in": "error",
     "handle-callback-err": "error",
     "implicit-arrow-linebreak": "error",
@@ -130,25 +140,31 @@
     "max-statements-per-line": "error",
     "new-cap": "error",
     "new-parens": "error",
+    "newline-per-chained-call": [
+      "error",
+      {
+        "ignoreChainWithDepth": 2
+      }
+    ],
     "no-array-constructor": "error",
     "no-async-promise-executor": "error",
     "no-bitwise": "error",
     "no-buffer-constructor": "error",
     "no-caller": "error",
     "no-compare-neg-zero": "error",
+    "no-constructor-return": "error",
     "no-div-regex": "error",
+    "no-duplicate-imports": "error",
     "no-else-return": "error",
     "no-empty-character-class": "error",
     "no-empty-function": "error",
     "no-empty-pattern": "error",
+    "no-eq-null": "error",
     "no-eval": "error",
     "no-extend-native": "error",
     "no-extra-bind": "error",
     "no-extra-label": "error",
-    "no-extra-parens": [
-      "error",
-      "functions"
-    ],
+    "no-extra-parens": "error",
     "no-floating-decimal": "error",
     "no-global-assign": "error",
     "no-implicit-coercion": [
@@ -180,7 +196,6 @@
     "no-multi-spaces": "error",
     "no-multi-str": "error",
     "no-multiple-empty-lines": "error",
-    "no-nested-ternary": "error",
     "no-new": "error",
     "no-new-func": "error",
     "no-new-object": "error",
@@ -219,9 +234,11 @@
     "no-unneeded-ternary": "error",
     "no-unsafe-finally": "error",
     "no-unsafe-negation": "error",
+    "no-unsafe-optional-chaining": "error",
     "no-unused-expressions": "error",
     "no-unused-vars": "error",
     "no-use-before-define": "error",
+    "no-useless-backreference": "error",
     "no-useless-call": "error",
     "no-useless-catch": "error",
     "no-useless-computed-key": "error",
@@ -261,9 +278,7 @@
     ],
     "one-var": [
       "error",
-      {
-        "initialized": "never"
-      }
+      "never"
     ],
     "one-var-declaration-per-line": "error",
     "operator-assignment": [
@@ -286,16 +301,30 @@
       "error",
       {
         "blankLine": "always",
-        "prev": "*",
-        "next": "return"
+        "prev": [
+          "block-like",
+          "const",
+          "let",
+          "directive",
+          "iife",
+          "import",
+          "export",
+          "return"
+        ],
+        "next": "*"
       },
       {
         "blankLine": "always",
-        "prev": [
+        "prev": "*",
+        "next": [
+          "block-like",
           "const",
-          "let"
-        ],
-        "next": "*"
+          "let",
+          "iife",
+          "import",
+          "export",
+          "return"
+        ]
       },
       {
         "blankLine": "any",
@@ -309,14 +338,15 @@
         ]
       },
       {
-        "blankLine": "always",
-        "prev": "directive",
-        "next": "*"
-      },
-      {
         "blankLine": "any",
-        "prev": "directive",
-        "next": "directive"
+        "prev": [
+          "import",
+          "export"
+        ],
+        "next": [
+          "import",
+          "export"
+        ]
       }
     ],
     "prefer-arrow-callback": "error",
@@ -334,9 +364,11 @@
         }
       }
     ],
+    "prefer-exponentiation-operator": "error",
     "prefer-numeric-literals": "error",
     "prefer-object-spread": "error",
     "prefer-promise-reject-errors": "error",
+    "prefer-regex-literals": "error",
     "prefer-rest-params": "error",
     "prefer-spread": "error",
     "prefer-template": "error",
@@ -353,6 +385,7 @@
       }
     ],
     "radix": "error",
+    "require-atomic-updates": "error",
     "require-await": "error",
     "rest-spread-spacing": "error",
     "semi": [
@@ -402,7 +435,10 @@
     "use-isnan": "error",
     "vars-on-top": "error",
     "wrap-iife": "error",
-    "yield-star-spacing": "error",
+    "yield-star-spacing": [
+      "error",
+      "after"
+    ],
     "yoda": [
       "error",
       "never"
