--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -164,7 +164,10 @@
     "no-extend-native": "error",
     "no-extra-bind": "error",
     "no-extra-label": "error",
-    "no-extra-parens": "error",
+    "no-extra-parens": [
+      "error",
+      "functions"
+    ],
     "no-floating-decimal": "error",
     "no-global-assign": "error",
     "no-implicit-coercion": [
