--- a/src/eslint-config.json
+++ b/src/eslint-config.json
@@ -1,51 +1,51 @@
 {
+  "$schema": "https://json.schemastore.org/eslintrc",
   "parserOptions": {
-    "ecmaVersion": 2021,
-    "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "script"
   },
   "env": {
-    "es6": true,
+    "browser": true,
+    "es2024": true,
     "node": true
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:sonarjs/recommended"
+  ],
+  "plugins": [
+    "sonarjs"
+  ],
   "ignorePatterns": [
     "node_modules/"
   ],
-  "extends": "eslint:recommended",
-  "globals": {
-    "document": "readonly",
-    "navigator": "readonly",
-    "window": "readonly"
-  },
   "rules": {
-    "accessor-pairs": "error",
+    "array-bracket-newline": [
+      "error",
+      "consistent"
+    ],
     "array-bracket-spacing": [
       "error",
       "always"
     ],
-    "array-callback-return": "error",
+    "array-callback-return": [
+      "error",
+      {
+        "allowImplicit": true
+      }
+    ],
     "arrow-body-style": "error",
-    "arrow-parens": [
-      "error",
-      "as-needed"
-    ],
-    "arrow-spacing": [
-      "error",
-      {
-        "before": true,
-        "after": true
-      }
-    ],
+    "arrow-parens": "error",
+    "arrow-spacing": "error",
     "block-spacing": "error",
-    "brace-style": "error",
-    "camelcase": [
+    "brace-style": [
       "error",
+      "1tbs",
       {
-        "properties": "never",
-        "ignoreDestructuring": true,
-        "ignoreImports": true
+        "allowSingleLine": true
       }
     ],
-    "class-methods-use-this": "error",
+    "camelcase": "error",
     "comma-dangle": [
       "error",
       "always-multiline"
@@ -55,19 +55,15 @@
       "error",
       "last"
     ],
-    "complexity": "error",
+    "complexity": [
+      "error",
+      30
+    ],
     "computed-property-spacing": [
       "error",
       "always"
     ],
-    "consistent-return": [
-      "error",
-      {
-        "treatUndefinedAsUnspecified": true
-      }
-    ],
     "consistent-this": "error",
-    "constructor-super": "error",
     "curly": "error",
     "default-case": "error",
     "default-case-last": "error",
@@ -91,26 +87,18 @@
     ],
     "function-paren-newline": [
       "error",
-      "multiline-arguments"
+      "consistent"
     ],
-    "generator-star-spacing": [
-      "error",
-      "after"
-    ],
-    "global-require": "error",
+    "generator-star-spacing": "error",
+    "getter-return": "error",
     "grouped-accessor-pairs": [
       "error",
       "getBeforeSet"
     ],
-    "guard-for-in": "error",
-    "handle-callback-err": "error",
     "implicit-arrow-linebreak": "error",
     "indent": [
       "error",
-      2,
-      {
-        "SwitchCase": 1
-      }
+      2
     ],
     "jsx-quotes": [
       "error",
@@ -119,57 +107,64 @@
     "key-spacing": "error",
     "keyword-spacing": "error",
     "line-comment-position": "error",
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "lines-between-class-members": "error",
+    "linebreak-style": "error",
     "max-classes-per-file": "error",
     "max-depth": "error",
     "max-len": [
       "error",
       {
-        "ignoreUrls": true,
+        "code": 120,
+        "ignoreComments": true,
+        "ignoreRegExpLiterals": true,
+        "ignoreStrings": true,
         "ignoreTemplateLiterals": true,
-        "ignoreRegExpLiterals": true
+        "ignoreUrls": true
       }
     ],
     "max-nested-callbacks": "error",
-    "max-params": "error",
-    "max-statements": "error",
+    "max-params": [
+      "error",
+      {
+        "max": 5
+      }
+    ],
+    "max-statements": [
+      "error",
+      {
+        "max": 20
+      }
+    ],
     "max-statements-per-line": "error",
     "new-cap": "error",
     "new-parens": "error",
     "newline-per-chained-call": [
       "error",
       {
-        "ignoreChainWithDepth": 2
+        "ignoreChainWithDepth": 3
       }
     ],
     "no-array-constructor": "error",
-    "no-async-promise-executor": "error",
+    "no-await-in-loop": "error",
     "no-bitwise": "error",
-    "no-buffer-constructor": "error",
     "no-caller": "error",
-    "no-compare-neg-zero": "error",
     "no-constructor-return": "error",
-    "no-div-regex": "error",
     "no-duplicate-imports": "error",
     "no-else-return": "error",
-    "no-empty-character-class": "error",
     "no-empty-function": "error",
-    "no-empty-pattern": "error",
+    "no-empty-static-block": "error",
     "no-eq-null": "error",
     "no-eval": "error",
-    "no-extend-native": "error",
     "no-extra-bind": "error",
+    "no-extra-boolean-cast": "error",
     "no-extra-label": "error",
     "no-extra-parens": [
       "error",
-      "functions"
+      "all",
+      {
+        "nestedBinaryExpressions": false
+      }
     ],
     "no-floating-decimal": "error",
-    "no-global-assign": "error",
     "no-implicit-coercion": [
       "error",
       {
@@ -180,11 +175,6 @@
     ],
     "no-implicit-globals": "error",
     "no-implied-eval": "error",
-    "no-inline-comments": "error",
-    "no-inner-declarations": [
-      "error",
-      "functions"
-    ],
     "no-invalid-this": "error",
     "no-iterator": "error",
     "no-label-var": "error",
@@ -192,39 +182,27 @@
     "no-lone-blocks": "error",
     "no-lonely-if": "error",
     "no-loop-func": "error",
-    "no-misleading-character-class": "error",
     "no-mixed-operators": "error",
-    "no-mixed-requires": "error",
     "no-multi-assign": "error",
     "no-multi-spaces": "error",
     "no-multi-str": "error",
     "no-multiple-empty-lines": "error",
     "no-new": "error",
     "no-new-func": "error",
+    "no-new-native-nonconstructor": "error",
     "no-new-object": "error",
-    "no-new-require": "error",
     "no-new-symbol": "error",
     "no-new-wrappers": "error",
-    "no-octal": "error",
     "no-octal-escape": "error",
     "no-param-reassign": "error",
-    "no-path-concat": "error",
-    "no-process-env": "error",
-    "no-process-exit": "error",
+    "no-promise-executor-return": "error",
     "no-proto": "error",
-    "no-prototype-builtins": "off",
     "no-restricted-globals": "error",
-    "no-restricted-imports": "error",
-    "no-restricted-modules": "error",
-    "no-restricted-properties": "error",
-    "no-restricted-syntax": "error",
     "no-return-assign": "error",
     "no-return-await": "error",
-    "no-self-assign": "error",
     "no-script-url": "error",
     "no-self-compare": "error",
     "no-sequences": "error",
-    "no-shadow-restricted-names": "error",
     "no-tabs": "error",
     "no-template-curly-in-string": "error",
     "no-throw-literal": "error",
@@ -232,29 +210,21 @@
     "no-undef": "error",
     "no-undef-init": "error",
     "no-undefined": "error",
-    "no-underscore-dangle": "error",
     "no-unmodified-loop-condition": "error",
     "no-unneeded-ternary": "error",
-    "no-unsafe-finally": "error",
-    "no-unsafe-negation": "error",
-    "no-unsafe-optional-chaining": "error",
     "no-unused-expressions": "error",
-    "no-unused-vars": "error",
+    "no-unused-private-class-members": "error",
     "no-use-before-define": "error",
-    "no-useless-backreference": "error",
     "no-useless-call": "error",
     "no-useless-catch": "error",
     "no-useless-computed-key": "error",
     "no-useless-concat": "error",
     "no-useless-constructor": "error",
-    "no-useless-escape": "error",
     "no-useless-rename": "error",
     "no-useless-return": "error",
     "no-var": "error",
-    "no-warning-comments": "error",
+    "no-warning-comments": "warn",
     "no-whitespace-before-property": "error",
-    "no-with": "error",
-    "nonblock-statement-body-position": "error",
     "object-curly-newline": [
       "error",
       {
@@ -266,12 +236,6 @@
       "error",
       "always"
     ],
-    "object-property-newline": [
-      "error",
-      {
-        "allowMultiplePropertiesPerLine": true
-      }
-    ],
     "object-shorthand": [
       "error",
       "always",
@@ -279,11 +243,6 @@
         "avoidQuotes": true
       }
     ],
-    "one-var": [
-      "error",
-      "never"
-    ],
-    "one-var-declaration-per-line": "error",
     "operator-assignment": [
       "error",
       "always"
@@ -294,66 +253,15 @@
     ],
     "padded-blocks": [
       "error",
-      {
-        "blocks": "never",
-        "switches": "never",
-        "classes": "never"
-      }
-    ],
-    "padding-line-between-statements": [
-      "error",
-      {
-        "blankLine": "always",
-        "prev": [
-          "block-like",
-          "const",
-          "let",
-          "directive",
-          "iife",
-          "import",
-          "export",
-          "return"
-        ],
-        "next": "*"
-      },
-      {
-        "blankLine": "always",
-        "prev": "*",
-        "next": [
-          "block-like",
-          "const",
-          "let",
-          "iife",
-          "import",
-          "export",
-          "return"
-        ]
-      },
-      {
-        "blankLine": "any",
-        "prev": [
-          "const",
-          "let"
-        ],
-        "next": [
-          "const",
-          "let"
-        ]
-      },
-      {
-        "blankLine": "any",
-        "prev": [
-          "import",
-          "export"
-        ],
-        "next": [
-          "import",
-          "export"
-        ]
-      }
+      "never"
     ],
     "prefer-arrow-callback": "error",
-    "prefer-const": "error",
+    "prefer-const": [
+      "warn",
+      {
+        "destructuring": "all"
+      }
+    ],
     "prefer-destructuring": [
       "error",
       {
@@ -369,6 +277,7 @@
     ],
     "prefer-exponentiation-operator": "error",
     "prefer-numeric-literals": "error",
+    "prefer-object-has-own": "error",
     "prefer-object-spread": "error",
     "prefer-promise-reject-errors": "error",
     "prefer-regex-literals": "error",
@@ -389,7 +298,6 @@
     ],
     "radix": "error",
     "require-atomic-updates": "error",
-    "require-await": "error",
     "rest-spread-spacing": "error",
     "semi": [
       "error",
@@ -402,8 +310,10 @@
         "after": true
       }
     ],
-    "semi-style": "error",
-    "sort-vars": "error",
+    "semi-style": [
+      "error",
+      "first"
+    ],
     "space-before-blocks": "error",
     "space-before-function-paren": [
       "error",
@@ -420,10 +330,7 @@
     "space-infix-ops": "error",
     "space-unary-ops": "error",
     "spaced-comment": "error",
-    "strict": [
-      "error",
-      "global"
-    ],
+    "strict": "error",
     "switch-colon-spacing": "error",
     "symbol-description": "error",
     "template-curly-spacing": [
@@ -435,16 +342,8 @@
       "error",
       "never"
     ],
-    "use-isnan": "error",
     "vars-on-top": "error",
     "wrap-iife": "error",
-    "yield-star-spacing": [
-      "error",
-      "after"
-    ],
-    "yoda": [
-      "error",
-      "never"
-    ]
+    "yield-star-spacing": "error"
   }
 }
