Fix dep versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "include": [
-    "**/*.ts",
-  ],
   "compilerOptions": {
     "strictNullChecks": true,
     "lib": [
       "DOM",
-      "ESNext"
-    ]
+      "ESNext",
+    ],
   },
+  "include": [
+    "**/*.ts",
+  ],
 }
