--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dkh-dev/eslint-config",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "ESLint config",
   "main": "index.js",
   "files": [
@@ -19,8 +19,8 @@
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
-    "eslint": ">=8.44.0",
-    "eslint-plugin-sonarjs": ">0.19.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "typescript": "^5.1.6"
   },
   "scripts": {
